# icf-draft

./: README.md  README_EN.md
ICF-Project/: Design.md  PACKAGED_USAGE.md  README.md  RUN_WEB.bat  Requirement.md  Task.md  pyproject.toml  requirements.txt
ICF-Project/TG-ICF模板/: 标准模板.docx
ICF-Project/skills/icf-amendment-history/: SKILL.md
ICF-Project/skills/icf-amendment-history/references/: acceptance-loop.md  capa-playbook.md  mvp-workflow.md  output-contract.md  template-contract.md  troubleshooting.md
ICF-Project/skills/icf-amendment-history/scripts/: compare.py  generate.py  validate.py
ICF-Project/src/icf_parser/: acceptance.py  delivery_model.py  docx_reader.py  pipeline.py  revision_extractor.py  rule_engine.py  service.py  template_writer.py  web_app.py
ICF-Project/templates/: index.html
